--- a/src/app/client/comments/comments.component.css
+++ b/src/app/client/comments/comments.component.css
@@ -9,11 +9,20 @@
     background-color: transparent;
     border: none;
 }
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+    .align{
+        padding-left: 10vw;
+        padding-right: 10vw;
+    }
+}
 h4{
     color:#f1875b;
    
-}
-.align{
-    padding-left: 10vw;
-    padding-right: 10vw;
 }
