--- a/src/app/client/completeorder/completeorder.component.html
+++ b/src/app/client/completeorder/completeorder.component.html
@@ -3,6 +3,7 @@
     <div class="bgdark col-12">
       <div class="col-md-12">
             <h3 class="text-center text-white">New Order > First Unit</h3>
+            <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
             <h4 class="text-center sp">Order Complete</h4>
       </div>
           <div class="row">
@@ -33,8 +34,11 @@
         </div>
         <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
-            <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/home']" routerLinkActive="router-link-active" skipLocationChange>BACK HOME</button>
-             <button type="button" class="btn btn3 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" skipLocationChange>PLACE NEW ORDER</button>
-              </div>
+            <div class="align">
+                <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/home']" routerLinkActive="router-link-active" skipLocationChange>BACK HOME</button>
+                <button type="button" class="btn btn3 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" skipLocationChange>PLACE NEW ORDER</button>
+       
+            </div>
+                      </div>
             </div>
             
