--- a/src/app/client/forget/forget.component.html
+++ b/src/app/client/forget/forget.component.html
@@ -1,9 +1,9 @@
 <div class="row background">
-    <div class="col-12 mt-1">
-        <a routerLink="/login"><i class="m-3 icon fa fa-arrow-left"></i></a>
-    </div>
+        <div class="float-left size">
+                <img src="/assets/image/icons/arrow.png" [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange class="img-fluid float-left">
+            </div>
     <div class="col-12">
-        <h3 class="text-center mt-5">Forgot your login info?</h3>
+        <h3 class="text-center mt-lg-5">Forgot your login info?</h3>
         <p class="text-center">An email will be sent to the registered address.</p>
     </div>
     <form class="col-12 mt-5 text-center" >
