--- a/src/app/client/revieworder/revieworder.component.css
+++ b/src/app/client/revieworder/revieworder.component.css
@@ -1,5 +1,13 @@
 
-
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+}
 
 .ordericon{
     width: 3rem;
