--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -3,6 +3,7 @@
   <div class="bgdark col-12">
             
           <h3 class="text-center text-white">New Order > First Unit</h3>
+          <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
           <h4 class="text-center sp">Property Access </h4>
 
    </div> 
