--- a/src/app/client/addonsv/addonsv.component.css
+++ b/src/app/client/addonsv/addonsv.component.css
@@ -21,3 +21,12 @@ h5{
     background-color:#F1875B;
     color:#fff;
 }
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+}
