--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -3,6 +3,7 @@
   <div class="bgdark col-12">
     <div class=" col-md-12">
           <h3 class="text-center text-white">New Order > {{totalunits}} First Unit</h3>
+          <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
           <h4 class="text-center sp">{{propertytype}} Address </h4>
     </div>
   </div> 
