--- a/src/app/client/register/register.component.css
+++ b/src/app/client/register/register.component.css
@@ -39,3 +39,23 @@ input.ng-invalid.ng-dirty
     
      
     }
+
+    .size{
+        position: absolute;
+        width: 5.5vw;
+        padding-top: 1.3vw;
+        margin-left: 9vw;
+    }
+
+    @media screen and (max-width: 420px) and (min-width: 320px){
+        .size{
+            position: absolute;
+            width: 10.5vw;
+    padding-top: 5.3vw;
+    margin-left: 4vw;
+        }
+        h2{
+            margin-top: 20vw;
+            margin-left: 4vw;
+        }
+    }
