--- a/src/app/client/squarefeet/squarefeet.component.css
+++ b/src/app/client/squarefeet/squarefeet.component.css
@@ -12,3 +12,13 @@ h4{
     padding-left: 10vw;
     padding-right:10vw;
 }
+
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+}
