--- a/src/app/client/units/units.component.css
+++ b/src/app/client/units/units.component.css
@@ -2,6 +2,15 @@ h4{
     color:#f1875b;
    
 }
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+}
 h5{
     color:#D5D5D5;
 }
