--- a/src/app/client/units/units.component.html
+++ b/src/app/client/units/units.component.html
@@ -3,6 +3,7 @@
   <div class="bgdark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
+          <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
           <h4 class="text-center">Products </h4>
     </div>
   </div>
