--- a/src/app/client/updateorder/updateorder.component.css
+++ b/src/app/client/updateorder/updateorder.component.css
@@ -3,6 +3,39 @@ h4{
     color:#f1875b;
     
 }
+.delivery{
+    margin-top: -4vw;
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: -1vw;
+    }
+}
+.orderquery{
+    position:absolute;
+    top: -12px;
+    margin-left: 275px;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .orderquery{
+      position:absolute;
+      top: -19px;
+      margin-left: -24px;
+    }
+    .align{
+        margin-left:8vw;
+        margin-right:8vw;
+    }
+    
+  }
+  @media screen and (max-width: 420px) and (min-width: 320px){
+    .align{
+        margin-left:8vw;
+        margin-right:8vw;
+    }
+  }
 h5{
     color:#d5d5d5;
 }
