--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -3,6 +3,21 @@
     <div class="bgdark col-12">
       <div class="col-md-12">
             <h3 class="text-center text-white">New Order > First Unit</h3>
+            <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
+            <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                <div *ngIf="invoicelist | async as aviso">
+                    <ul style="display:none">
+                      <li *ngFor="let aviso of aviso; let i = index">
+                        {{aviso}}
+                      </li>
+                    </ul>
+                    
+                       
+                        <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                      
+                
+                  </div>
+            </div>
             <h4 class="text-center sp">Order Updated</h4>
       </div>
           <div class="row">
@@ -26,7 +41,10 @@
 </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
-          <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" >ADD ANOTHER UNIT</button>
-          <button type="button" class="btn btn3 btn-md btn-block" (click)="submit()">SUBMIT ORDER</button>
-      </div>
+          <div class="align">
+                <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" >ADD ANOTHER UNIT</button>
+                <button type="button" class="btn btn3 btn-md btn-block" (click)="submit()">SUBMIT ORDER</button>
+          
+          </div>
+            </div>
     </div>
