--- a/src/app/client/visitingdate/visitingdate.component.css
+++ b/src/app/client/visitingdate/visitingdate.component.css
@@ -24,3 +24,14 @@ h5{
         margin-left:14vw;
     }
 }
+.delivery{
+    margin-top: -4vw;
+    margin-right: 1vw;
+
+}
+@media screen and (max-width: 420px) and (min-width: 320px){
+    .delivery{
+        margin-top: -15vw;
+        margin-right: 2vw;
+    }
+}
