--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-white">New Order > First Unit</h3>
+        <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
         <h4 class="text-center sp">Pick a Date </h4>
       </div>
     </div>
@@ -30,7 +31,7 @@
         <h3 class="text-center my-5">Please choose an available date for this order </h3>
       </div>
 
-      <div  class="offset-lg-4  offset-1 col-8 py-5 align ">
+      <div  class="offset-lg-4  offset-2 col-8 py-5 align ">
         <div class=" mx-auto  my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
