--- a/src/app/client/forget/forget.component.html
+++ b/src/app/client/forget/forget.component.html
@@ -1,13 +1,14 @@
 <div class="row background">
-        <div class="float-left size">
-                <img src="/assets/image/icons/arrow.png" [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange class="img-fluid float-left">
-            </div>
+        
     <div class="col-12">
+        <a class="float-left size" [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange>
+            <img src="/assets/image/icons/arrow.png" class="img-fluid float-left">
+        </a>
         <h3 class="text-center mt-lg-5">Forgot your login info?</h3>
         <p class="text-center">An email will be sent to the registered address.</p>
     </div>
-    <form class="col-12 mt-5 text-center" >
-        <div class="row mt-5">
+    <form class="col-12 mt-lg-5 top text-center" >
+        <div class="row mt-lg-5">
             <div class="offset-md-3 col-md-6 col-xs-12">
                 <input type="text" name="recoveremail" #recoveremail placeholder="Email Address"  class="form-control p-4 mb-5 input-lg numinput text-center">
             </div>
