--- a/src/app/client/register/register.component.html
+++ b/src/app/client/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="row bgrd">
-  <div class="float-left size">
-      <img src="/assets/image/icons/arrow.png" [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange class="img-fluid float-left">
-  </div>
+  <a class="float-left size"  [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange>
+      <img src="/assets/image/icons/arrow.png" class="img-fluid float-left">
+  </a>
   <div class="col-12 mt-lg-5 mb-lg-5">
 
     <h2 class="text-center">Please let us know who to register.</h2>
