--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -12,7 +12,7 @@
           <button type="button" class="btn3 text-white" [routerLink]="['/main/order/visitingtime']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
-          <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
+          <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
         </div>
         <div class="col-md-4 col-4 text-right">
           <button type="submit" class="btn3 text-white">NEXT</button>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="offset-md-2 col-md-8 col-xs-12 align">
+    <div class="offset-md-2 col-md-8 col-11 offset-1 mx-auto">
       <textarea class="form-control form-rounded" rows="13" name="comment" #comment="ngModel" ngModel placeholder="Please Enter Your Comments"
         required></textarea>
 
