--- a/src/app/client/container/container.component.html
+++ b/src/app/client/container/container.component.html
@@ -12,7 +12,7 @@
             </div>
             </ng-template>
           
-            <h5 class="text-white mx-2 my-4">{{(profile | async)?.displayName | titlecase }}</h5>
+            <h5 class="text-white text-center my-4">{{(profile | async)?.displayName | titlecase }}</h5>
           
             <nav>
               <ul class="navbar-nav mx-auto my-5 nav-fill w-100">
@@ -63,7 +63,7 @@
               <div class="row">
                 <div class="col-12 bgdark">
                   <button type="button" style="background-color:#636363; width: 3vw;" mat-button (click)="sidenav.toggle()">
-                    <img src="../../../assets/image/icons/Untitled-1.png">
+                    <img src="../../../assets/image/icons/Untitled-1.png" class="size">
                   </button>
                 </div>
               </div>
