--- a/src/app/client/addonsv/addonsv.component.css
+++ b/src/app/client/addonsv/addonsv.component.css
@@ -24,9 +24,59 @@ h5{
 .delivery{
     margin-top: -4vw;
 }
-@media screen and (max-width: 420px) and (min-width: 320px){
+@media screen and (max-width: 420px) and (min-width: 400px){
     .delivery{
-        margin-top: -15vw;
-        margin-right: -1vw;
+	    margin-top: -14vw;
+    margin-right: -1vw;
+}
+h3{
+	font-size:1.4rem;
+}
+h4{
+	font-size:1.4rem;
+}
+.total{
+    margin-top:2vw;
+}
+h5{
+    font-size: 1.1rem
+}
+}
+@media screen and (max-width: 325px) and (min-width: 300px){
+    .delivery{
+	    margin-top: -18vw;
+    margin-right: -1vw;
+}
+h3{
+	font-size:1.05rem;
+}
+h4{
+	font-size:1.05rem;
+}
+.total{
+    margin-top:2vw;
+}
+h5{
+    font-size: 1.1rem
+}
+}
+
+@media screen and (max-width: 375px) and (min-width: 340px){
+    h3{
+        font-size:1.2rem;
+    
+    }
+    .delivery{
+        margin-top: -16vw;
+        margin-right: -1vw;    
+    }
+    h4{
+        font-size:1.2rem;
+    }
+    .total{
+        margin-top:2vw;
+    }
+    h5{
+        font-size: 1.1rem
     }
 }
