--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -17,7 +17,7 @@
       </div>
       
     </div>
-    <div class="mt-3 mb-5 offset-1 col-10">
+    <div class="mt-5 mb-5 offset-1 col-11 mx-auto">
       <input type="text" placeholder="Street Address" class="numinput form-control p-4 text-center my-5"  formControlName="street" name="street" id="name" required >
     <!-- <p>{{addressformgroup.get('street').value}}</p> -->
        <!-- <div *ngIf="addressformgroup.controls['street'].haserror('required')">
