--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -18,7 +18,7 @@
             skipLocationChange>BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
-          <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
+          <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
         </div>
         <div class="col-md-4 col-4 text-right">
           <button type="button" type="submit" class="btn btn-link text-white">NEXT</button>
@@ -31,7 +31,7 @@
         <h3 class="text-center my-5">Please choose an available date for this order </h3>
       </div>
 
-      <div  class="offset-lg-4  offset-2 col-8 py-5 align ">
+      <div  class="offset-lg-4  offset-1 col-10 py-5 ">
         <div class=" mx-auto  my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
