--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -11,7 +11,7 @@
               <button type="button" class="btn3 text-white" [routerLink]="['/main/order/visitingdate']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
           </div>
           <div class="col-md-4 col-4 text-center">
-              <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
+              <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
             </div>
           <div class="col-md-4 col-4 text-right">
               <button type="button" class="btn3 text-white">NEXT</button>
@@ -25,7 +25,7 @@
           </div>
         </div>
     <div class="row">
-      <div class="col-xs-12 my-2 py-md-2 offset-md-2 col-md-8 lg-offset-2 col-lg-8 align">
+      <div class=" my-2 py-md-2  offest-1 col-10 mx-auto align">
           <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatetime(10)">10:00 AM</button>
          <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(11)">11:00 AM</button>
         <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(12)">12:00 PM</button>
