--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -42,7 +42,7 @@
                                                 
                                                         </div>
                                                 </div>
-                                                <div *ngIf="password.touched" class="mt-2">
+                                                <div *ngIf="password.valid && (password.dirty || password.touched)" class="mt-2">
                                                 
                                                
                                                                 <img src="../../../assets/image/icons/tick.png" class="img img-responsive" style="width:2rem">
