--- a/src/app/client/addonsv/addonsv.component.html
+++ b/src/app/client/addonsv/addonsv.component.html
@@ -11,7 +11,7 @@
         <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/products']" routerLinkActive="router-link-active">BACK</button>
       </div>
       <div class="col-md-4 col-4 text-center">
-        <h5 class="total">Subtotal:<span class="sp">{{total}}</span></h5>
+        <h5 class="total">Subtotal:<span class="mx-1 sp">{{total}}</span></h5>
       </div>
       <div class="col-md-4 col-4 text-right">
           <button type="button" (click)="vaddonsupdated()" class="btn btn-link text-white">NEXT</button>
