--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -12,7 +12,7 @@
           <button type="button" class="btn3 text-white" [routerLink]="['/main/order/visitingtime']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
-          <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
+          <h5 class="total">Subtotal:<span class="mx-1 sp">${{orderprice}}</span></h5>
         </div>
         <div class="col-md-4 col-4 text-right">
           <button type="submit" class="btn3 text-white">NEXT</button>
