--- a/src/app/client/completeorder/completeorder.component.html
+++ b/src/app/client/completeorder/completeorder.component.html
@@ -11,7 +11,7 @@
                   <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/updateorder']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
               </div>
               <div class="col-md-4 col-4 text-center">
-                  <h5 class="total">Subtotal:<span class="sp">${{order.orderprice}}</span></h5>
+                  <h5 class="total">Subtotal:<span class="mx-1 sp">${{order.orderprice}}</span></h5>
                 </div>
               <div class="col-md-4 col-4 text-right">
                <br>
