--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   
   <div class="bgdark col-12">
-    <div class="col-11 offset-1 col-md-12">
+    <div class="col-11 offset-1">
       <h3 class="text-center text-white">Welcome , {{auth.displayName | titlecase}}!</h3>
   
       <p class="text-center text-white"><br></p>
