--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -11,7 +11,7 @@
           <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/address']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
             </div>
             <div class="col-md-4 col-4 text-center">
-                <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
+                <h5 class="total">Subtotal:<span class="mx-1 sp">${{orderprice}}</span></h5>
               </div>
               <div class="col-md-4 col-4 text-right">
           <button type="button" class="btn btn-link  text-white float-right" (click)="checksqft()">NEXT</button>
